--- a/style.css
+++ b/style.css
@@ -5,4 +5,13 @@
 
 body {
     background-color: ddd;
+    text-align: center;
+}
+
+h1 {
+    margin-top: 10px;
+}
+
+#gameCanvas {
+    margin: 25 auto;
 }
