--- a/style.css
+++ b/style.css
@@ -1,8 +1,3 @@
-* {
-    margin: 0;
-    padding: 0;
-}
-
 body {
     background-color: #ddd;
     text-align: center;
@@ -10,10 +5,10 @@ body {
 }
 
 h1 {
-    margin-top: 10px;
+    margin: 10px 0 10px 0;
 }
 
 #gameCanvas {
     border-radius: 7%;
-    margin: 10 auto;
+    margin: 0 auto;
 }
